# package

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Project.swift  README.md
.github/workflows/: build-release.yml
Resources/: strfry.conf.template
Resources/Binaries/: .gitkeep
Sources/TenexLauncher/: AGENTS.md  App.swift  ConfigModels.swift  ConfigStore.swift  DaemonManager.swift  DaemonView.swift  GeneralConfigView.swift  LLMsView.swift  MainTabView.swift  MainWindow.swift  MenuBarIcon.swift  MenuBarView.swift  MobileSetupView.swift  ModelCatalogService.swift  NegentropySync.swift  NgrokManager.swift  OnboardingView.swift  OpenClawDetector.swift  OpenClawImportView.swift  OrchestratorManager.swift  PendingEventsQueue.swift  PlatformCompat.swift  ProviderLogo.swift  ProvidersView.swift  QRCodeGenerator.swift  RelayManager.swift  (+2 more)
crates/tenex-launcher-tui/: Cargo.toml
crates/tenex-launcher-tui/src/: dashboard.rs  display.rs  logo.rs  main.rs  nostr.rs  onboarding.rs  repl.rs  settings.rs  ui.rs
crates/tenex-launcher-tui/src/ui/screens/onboarding/: mod.rs
crates/tenex-orchestrator/: Cargo.toml
crates/tenex-orchestrator/scripts/: generate-swift-bindings.sh
crates/tenex-orchestrator/src/: lib.rs
crates/tenex-orchestrator/src/catalog/: mod.rs
crates/tenex-orchestrator/src/config/: mod.rs  models.rs  store.rs
crates/tenex-orchestrator/src/ffi/: config_api.rs  lifecycle_api.rs  mod.rs  onboarding_api.rs  process_api.rs  provider_api.rs
crates/tenex-orchestrator/src/onboarding/: mod.rs  state_machine.rs
crates/tenex-orchestrator/src/openclaw/: detector.rs
crates/tenex-orchestrator/src/process/: daemon.rs  mod.rs  ngrok.rs  relay.rs
crates/tenex-orchestrator/src/provider/: detector.rs  mod.rs  test.rs
crates/tenex-orchestrator/swift-bindings/: tenex_orchestrator.swift  tenex_orchestratorFFI.h  tenex_orchestratorFFI.modulemap
relay/: acl.go  config.go  go.mod  go.sum  main.go  nip9_test.go  relay.go  sync.go
scripts/: build.sh
(+4 files in other folders)
