[workspace]
resolver = "2"
members = [
    "crates/tenex-orchestrator",
    "crates/tenex-launcher-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
dialoguer = { version = "0.11", features = ["history", "fuzzy-select"] }
console = "0.15"
indicatif = "0.17"
futures = "0.3"
dirs = "5"
tempfile = "3"
uniffi = "0.29"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
getrandom = "0.2"
nostr-sdk = "0.44"
