[package]
name = "tenex-launcher-tui"
version.workspace = true
edition.workspace = true

[dependencies]
tenex-orchestrator = { path = "../tenex-orchestrator" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
dialoguer.workspace = true
console.workspace = true
indicatif.workspace = true
futures.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
getrandom.workspace = true
